--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "fepper-ui",
   "homepage": "https://github.com/electric-eloquence/fepper-ui",
-  "description": "This is the client-side package that powers the Fepper UI",
+  "description": "The client-side package that powers the Fepper UI",
   "license": "MIT",
   "ignore": [
     "**/.*",
