--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "fepper-ui",
+  "version": "0.0.0",
   "homepage": "https://github.com/electric-eloquence/fepper-ui",
   "description": "The client-side package that powers the Fepper UI",
   "license": "MIT",
@@ -10,5 +11,15 @@
     "test",
     "tests"
   ],
-  "version": "0.0.0"
+  "dependencies": {
+    "classlist": "2014.12.13",
+    "he": "^1.1.0",
+    "hogan": "^3.0.2",
+    "jquery": "2.1.4",
+    "js-beautify": "1.6.4",
+    "jwerty": "0.3.2",
+    "prism": "1.5.1",
+    "script.js": "2.5.8",
+    "typeahead.js": "0.10.5"
+  }
 }
