--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fepper-ui",
-  "version": "0.1.6",
+  "version": "0.2.0-rc.0",
   "description": "The client-side package that powers the Fepper UI",
   "repository": {
     "type": "git",
