--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "js-beautify": "1.6.4",
     "jwerty": "0.3.2",
     "prismjs": "1.5.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "15.6.2",
+    "react-dom": "15.6.2",
     "typeahead.js": "0.10.5",
     "wolfy87-eventemitter": "4.2.11"
   }
