--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,9 +8,7 @@
     "ecmaVersion": 8
   },
   "globals": {
-    "$": true,
-    "jQuery": true,
-    "jwerty": true
+    "$": true
   },
   "rules": {
     // Errors.
