--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "fepper-ui",
   "description": "The client-side package that powers the Fepper UI",
+  "scripts": {
+    "prepush": "npm test",
+    "test": "./node_modules/.bin/eslint scripts"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/electric-eloquence/fepper-ui.git"
@@ -28,11 +32,14 @@
   },
   "homepage": "https://github.com/electric-eloquence/fepper-ui#readme",
   "devDependencies": {
+    "eslint": "3.x",
     "he": "1.1.0",
     "hogan.js": "3.0.2",
+    "husky": "^0.14.3",
     "jquery": "3.3.1",
+    "jquery.cookie": "1.4.1",
     "js-beautify": "1.6.4",
-    "jwerty": "0.3.2",
+    "mousetrap": "^1.6.2",
     "prismjs": "1.5.1",
     "react": "15.6.2",
     "react-dom": "15.6.2",
