Squashed commit of the following:
commit af9a51618af76b67df17596e51c0e768f8a8cd91
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Wed Oct 24 16:29:26 2018 -0400

    all -> viewall

commit 3043ddf4a84f5e175046e42ef7b6e049f650248e
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Tue Oct 23 11:38:43 2018 -0400

    pl-pattern-nav-target -> sg-nav-target

commit 8e1a6e4d546666b435fed82719416692fbb8fdca
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Mon Oct 22 08:45:55 2018 -0400

    patternLab -> patternlab

commit 4fc8852097f62db8b6f39d713dd4942f722e2254
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Sun Oct 21 22:30:09 2018 -0400

    disabling mustache browser for file: protocol

commit 87e99f6e029eb0e4332fffc0dbbdd4f0be76d932
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Sun Oct 21 22:12:40 2018 -0400

    error message for using code-viewer with file:

commit 7532ef4c9ebb950a19aae2d7d338d3485f41540b
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Sun Oct 21 13:17:10 2018 -0400

    adding css class for file protocol

commit d5ba39b054a19d5db33ea71d6d1c024c0fc81f8e
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Sun Oct 21 12:29:03 2018 -0400

    better reliance on window.patternPaths

commit 321d49eaba9d217dc8414d1a4b1a8f01f230f942
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Sun Oct 21 10:20:19 2018 -0400

    dynamic public paths, livereload disabled for file protocol

commit 78d53ce026a9ecdd87bea86b442410b13def3f59
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Sat Oct 20 17:08:15 2018 -0400

    removing unnecessary getFilename function

commit 94572f85d6861876e6ce37a5334589b20be17056
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Sat Oct 20 10:37:17 2018 -0400

    getting file: protocol to work

commit 5860b9306157ecf1c35a0eef2461c1e368b1d1bb
Author: e2tha-e <ee@electric-eloquence.io>
Date:   Sat Oct 20 09:50:45 2018 -0400

    moving styleguide.html out of fepper-ui, making file protocol work

commit 6a8032aee31881967

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 .*.swp
-node_modules
-patternlab-data.js
-styleguide.html
+.DS_Store
+/data/*
+/scripts/ui.js
+/styleguide.html
+/styles/ui.css
+node_modules/
