--- a/package.json
+++ b/package.json
@@ -33,16 +33,14 @@
   "homepage": "https://github.com/electric-eloquence/fepper-ui#readme",
   "devDependencies": {
     "eslint": "3.x",
+    "feplet": "^0.1.4",
     "he": "1.1.0",
-    "hogan.js": "3.0.2",
     "husky": "^0.14.3",
     "jquery": "3.3.1",
     "jquery.cookie": "1.4.1",
     "js-beautify": "1.6.4",
     "mousetrap": "1.6.2",
     "prismjs": "1.5.1",
-    "react": "15.6.2",
-    "react-dom": "15.6.2",
     "typeahead.js": "0.10.5",
     "wolfy87-eventemitter": "4.2.11"
   }
