--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fepper-ui",
-  "version": "0.4.1-rc.0",
+  "version": "0.4.1",
   "description": "The client-side package that powers the Fepper UI",
   "scripts": {
     "prepush": "npm test",
