--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "The client-side package that powers the Fepper UI",
   "scripts": {
     "prepush": "npm test",
-    "test": "./node_modules/.bin/eslint scripts"
+    "test": "eslint scripts"
   },
   "repository": {
     "type": "git",
