--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "homepage": "https://github.com/electric-eloquence/fepper-ui#readme",
   "devDependencies": {
     "eslint": "3.x",
-    "feplet": "*",
+    "feplet": "^0.2.3",
     "he": "1.1.0",
     "husky": "^1.3.1",
     "jquery": "3.3.1",
