--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "eslint": "3.x",
     "feplet": "*",
     "he": "1.1.0",
-    "husky": "^1.3.1",
+    "husky": "1.x",
     "jquery": "3.3.1",
     "jquery.cookie": "1.4.1",
     "js-beautify": "^1.8.9",
