specified window size for e2e tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,21 +4,17 @@ node_js:
 matrix:
   include:
     - os: linux
-      sudo: required
       addons:
         apt:
           sources:
             - google-chrome
           packages:
+            - fonts-liberation
             - google-chrome-stable
     - os: osx
-      sudo: required
-      env: HOMEBREW_CASK_OPTS='--appdir=/Applications'
-before_install:
-  - |
-    if [ "$TRAVIS_OS_NAME" = "osx" ]; then
-      brew update > /dev/null
-      brew cask install google-chrome
-    fi
+      addons:
+        homebrew:
+          casks:
+            - google-chrome
 after_script:
   - npm run coverage
