--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "mocha": "6.x",
     "nyc": "14.x",
     "rollup": "^1.16.7",
-    "sinon": "^7.3.2",
+    "sinon": "7.x",
     "wdio-chromedriver-service": "^5.0.2",
     "webdriverio": "^5.11.6"
   }
