--- a/package.json
+++ b/package.json
@@ -40,14 +40,14 @@
   },
   "homepage": "https://github.com/electric-eloquence/fepper-ui#readme",
   "dependencies": {
-    "feplet": "1.0.0-rc.0",
+    "feplet": "*",
     "he": "1.1.0",
     "jquery": "3.4.1",
     "js-beautify": "1.9.0",
     "mousetrap": "1.6.2",
     "prismjs": "1.5.1",
     "redux": "^4.0.4",
-    "requerio": "0.5.0-rc.2",
+    "requerio": "*",
     "typeahead.js": "0.10.5",
     "universal-cookie": "^4.0.2",
     "wolfy87-eventemitter": "4.2.11"
