--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ branches:
   - master
   - release
 before_install:
-  - HOMEBREW_NO_AUTO_UPDATE=1 brew cask install google-chrome
+  - brew update-reset
+  - brew cask install google-chrome
 after_script:
   - npm run coverage
