--- a/package.json
+++ b/package.json
@@ -59,16 +59,16 @@
     "@babel/preset-env": "^7.5.4",
     "@babel/register": "^7.4.4",
     "@babel/runtime": "^7.5.4",
-    "@wdio/cli": "^5.11.6",
-    "@wdio/local-runner": "^5.11.6",
-    "@wdio/mocha-framework": "^5.11.0",
-    "@wdio/spec-reporter": "^5.11.6",
-    "@wdio/sync": "^5.11.0",
+    "@wdio/cli": "5.13.2",
+    "@wdio/local-runner": "5.13.2",
+    "@wdio/mocha-framework": "5.13.2",
+    "@wdio/spec-reporter": "5.13.2",
+    "@wdio/sync": "5.13.2",
     "babel-eslint": "^10.0.2",
     "chai": "4.x",
     "chai-webdriverio": "^1.0.0",
     "cheerio": "^1.0.0-rc.3",
-    "chromedriver": "^77.0.0",
+    "chromedriver": "^78.0.1",
     "coveralls": "3.x",
     "eslint": "6.x",
     "husky": "1.x",
@@ -77,6 +77,6 @@
     "rollup": "^1.16.7",
     "sinon": "7.x",
     "wdio-chromedriver-service": "^5.0.2",
-    "webdriverio": "^5.11.6"
+    "webdriverio": "5.13.2"
   }
 }
