--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fepper-ui",
-  "version": "0.7.0-rc.0",
+  "version": "0.7.0",
   "description": "The client-side package that powers the Fepper UI",
   "scripts": {
     "coverage": "nyc report --reporter=text-lcov | coveralls",
