--- a/package.json
+++ b/package.json
@@ -41,16 +41,16 @@
   "homepage": "https://github.com/electric-eloquence/fepper-ui#readme",
   "dependencies": {
     "feplet": "*",
-    "he": "1.1.0",
+    "he": "1.2.0",
     "jquery": "3.4.1",
-    "js-beautify": "1.9.0",
-    "mousetrap": "1.6.2",
-    "prismjs": "1.5.1",
-    "redux": "^4.0.4",
+    "js-beautify": "^1.10.3",
+    "mousetrap": "1.6.5",
+    "prismjs": "1.19.0",
+    "redux": "^4.0.5",
     "requerio": "*",
     "typeahead.js": "0.10.5",
-    "universal-cookie": "^4.0.2",
-    "wolfy87-eventemitter": "4.2.11"
+    "universal-cookie": "4.0.3",
+    "wolfy87-eventemitter": "5.2.9"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
