--- a/.github/workflows/mac-ci.yml
+++ b/.github/workflows/mac-ci.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           brew update-reset
           brew cask install google-chrome
-          npm install
+          npm ci
           npm test
           npx nyc report --reporter=text-lcov > ./lcov.info
 
