--- a/package.json
+++ b/package.json
@@ -59,16 +59,16 @@
     "@babel/preset-env": "^7.5.4",
     "@babel/register": "^7.4.4",
     "@babel/runtime": "^7.5.4",
-    "@wdio/cli": "5.18.6",
-    "@wdio/local-runner": "5.18.6",
-    "@wdio/mocha-framework": "5.18.6",
-    "@wdio/spec-reporter": "5.18.6",
-    "@wdio/sync": "5.18.6",
+    "@wdio/cli": "^6.0.15",
+    "@wdio/local-runner": "^6.0.15",
+    "@wdio/mocha-framework": "^6.0.15",
+    "@wdio/spec-reporter": "^6.0.14",
+    "@wdio/sync": "^6.0.15",
     "babel-eslint": "^10.0.2",
     "chai": "4.x",
     "chai-webdriverio": "^1.0.0",
     "cheerio": "^1.0.0-rc.3",
-    "chromedriver": "^80.0.0",
+    "chromedriver": "^80.0.2",
     "coveralls": "3.x",
     "eslint": "6.x",
     "husky": "4.x",
@@ -77,7 +77,7 @@
     "nyc": "15.x",
     "rollup": "^1.16.7",
     "sinon": "8.x",
-    "wdio-chromedriver-service": "^5.0.2",
-    "webdriverio": "5.13.2"
+    "wdio-chromedriver-service": "^6.0.1",
+    "webdriverio": "^6.0.15"
   }
 }
