--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "description": "The client-side package that powers the Fepper UI",
   "scripts": {
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "e2e": "node test/e2e",
     "lint": "eslint scripts && eslint test",
-    "test": "npm run unit && npm run e2e",
-    "unit": "nyc mocha --exit --require @babel/register test/unit"
+    "test": "npm run test:unit && npm run test:e2e",
+    "test:e2e": "node test/e2e",
+    "test:unit": "nyc mocha --exit --require @babel/register test/unit"
   },
   "husky": {
     "hooks": {
