--- a/package.json
+++ b/package.json
@@ -59,13 +59,13 @@
     "@babel/preset-env": "^7.5.4",
     "@babel/register": "^7.4.4",
     "@babel/runtime": "^7.5.4",
-    "@wdio/cli": "^6.0.15",
-    "@wdio/local-runner": "^6.0.15",
-    "@wdio/mocha-framework": "^6.0.15",
-    "@wdio/spec-reporter": "^6.0.14",
-    "@wdio/sync": "^6.0.15",
+    "@wdio/cli": "6.1.5",
+    "@wdio/local-runner": "6.1.6",
+    "@wdio/mocha-framework": "6.1.6",
+    "@wdio/spec-reporter": "6.1.5",
+    "@wdio/sync": "6.1.5",
     "babel-eslint": "^10.0.2",
-    "chai": "4.x",
+    "chai": "4.0.1",
     "chai-webdriverio": "^1.0.0",
     "cheerio": "^1.0.0-rc.3",
     "chromedriver": "^80.0.2",
@@ -77,7 +77,7 @@
     "nyc": "15.x",
     "rollup": "^1.16.7",
     "sinon": "8.x",
-    "wdio-chromedriver-service": "^6.0.1",
-    "webdriverio": "^6.0.15"
+    "wdio-chromedriver-service": "6.0.2",
+    "webdriverio": "6.1.5"
   }
 }
