--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
   },
   "homepage": "https://github.com/electric-eloquence/fepper-ui#readme",
   "dependencies": {
-    "feplet": "^1.2.0",
+    "feplet": "^1.2.1-rc.0",
     "he": "1.2.0",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "js-beautify": "1.11.0",
     "mousetrap": "1.6.5",
     "prismjs": "1.19.0",
