--- a/.github/workflows/mac-ci.yml
+++ b/.github/workflows/mac-ci.yml
@@ -12,8 +12,7 @@ jobs:
     strategy:
       matrix:
         node-version:
-          - 12.x
-          - 14.x
+          - 12.x # fepper-ui is for the browser, not Node.js. Just test in the oldest supported LTS version.
     steps:
       - uses: actions/checkout@v2
 
