--- a/package.json
+++ b/package.json
@@ -59,16 +59,16 @@
     "@babel/preset-env": "^7.5.4",
     "@babel/register": "^7.4.4",
     "@babel/runtime": "^7.5.4",
-    "@wdio/cli": "6.1.17",
-    "@wdio/local-runner": "6.1.17",
-    "@wdio/mocha-framework": "6.1.17",
-    "@wdio/spec-reporter": "6.1.14",
-    "@wdio/sync": "6.1.14",
+    "@wdio/cli": "6.3.3",
+    "@wdio/local-runner": "6.3.3",
+    "@wdio/mocha-framework": "6.3.0",
+    "@wdio/spec-reporter": "6.3.0",
+    "@wdio/sync": "6.3.3",
     "babel-eslint": "^10.0.2",
-    "chai": "4.0.1",
+    "chai": "4.x",
     "chai-webdriverio": "^1.0.0",
     "cheerio": "^1.0.0-rc.3",
-    "chromedriver": "^83.0.0",
+    "chromedriver": "^84.0.0",
     "coveralls": "3.x",
     "eslint": "6.x",
     "husky": "4.x",
@@ -78,6 +78,6 @@
     "rollup": "^1.16.7",
     "sinon": "8.x",
     "wdio-chromedriver-service": "6.0.3",
-    "webdriverio": "6.1.17"
+    "webdriverio": "6.3.3"
   }
 }
