--- a/package.json
+++ b/package.json
@@ -41,14 +41,14 @@
   },
   "homepage": "https://github.com/electric-eloquence/fepper-ui#readme",
   "dependencies": {
-    "feplet": "^1.2.1",
+    "feplet": "^1.2.2-rc.0",
     "he": "1.2.0",
     "jquery": "^3.5.1",
     "js-beautify": "1.11.0",
     "mousetrap": "1.6.5",
     "prismjs": "1.21.0",
     "redux": "^4.0.5",
-    "requerio": "^0.5.4",
+    "requerio": "^0.5.5",
     "typeahead.js": "0.10.5",
     "universal-cookie": "4.0.3",
     "wolfy87-eventemitter": "5.2.9"
