removed package-lock.json from version control

--- a/.github/workflows/mac-ci.yml
+++ b/.github/workflows/mac-ci.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           brew update-reset
           brew cask install google-chrome
-          npm ci
+          npm install
           npm run lint
           npm test
           npx nyc report --reporter=text-lcov > ./lcov.info
