--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "homepage": "https://github.com/electric-eloquence/fepper-ui#readme",
   "dependencies": {
-    "feplet": "^1.2.2-rc.0",
+    "feplet": "^1.2.2",
     "he": "1.2.0",
     "jquery": "^3.5.1",
     "js-beautify": "1.11.0",
