fixed brew cask installation for ci

--- a/.github/workflows/mac-ci.yml
+++ b/.github/workflows/mac-ci.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Build
         run: |
           brew update-reset
-          brew cask install google-chrome
+          brew install --cask google-chrome
           npm install
           npm run lint
           npm test
