--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "he": "1.2.0",
     "jquery": "^3.5.1",
     "mousetrap": "1.6.5",
+    "prismjs": "1.23.0",
     "redux": "^4.0.5",
     "requerio": "*",
     "typeahead.js": "0.10.5",
@@ -69,6 +70,7 @@
     "chromedriver": "^89.0.0",
     "coveralls": "3.x",
     "eslint": "7.x",
+    "fepper": "*",
     "husky": "4.x",
     "mkdirp": "^1.0.3",
     "mocha": "8.x",
