Squashed commit of the following:
commit 9180e71fa34734f4328ad03f9f836cdccad4f5a0
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Thu Jul 1 14:20:31 2021 -0400

    added e2e tests

commit aaeb6ed1c8932496a4c580fa0f2cf70da7ba49a3
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Thu Jul 1 08:02:55 2021 -0400

    completed unit test coverage

commit 75dd0064442a8ef355276945a0e4b9518dac3472
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Thu Jul 1 05:50:38 2021 -0400

    improved unit tests

commit 4820fbf5ca0f12a4175574bad047fddc5186f14d
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Wed Jun 30 11:29:26 2021 -0400

    more passing tests and coverage

commit 3361fc1ba3c368fdd0083f8b90951140d255c2af
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Tue Jun 29 11:22:42 2021 -0400

    more passing tests and coverage

commit 1cbd97777fda5cf24bb43f00621cd4b05072785a
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Fri Jun 25 17:46:40 2021 -0400

    more unit test coverage

commit d7614ebf12ee3b59fea2421eb60231c64b2f0581
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Fri Jun 25 17:01:04 2021 -0400

    passing existing tests

commit 073c00c24a28a0d190597ff277fde347906139c5
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Fri Jun 25 15:53:57 2021 -0400

    passing existing tests

commit 018311c89e572ea442a8337ed3e3606846601624
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Fri Jun 25 10:42:35 2021 -0400

    full git integration

commit e36df2c7953d458b55bb1537d51424e9e6dd5d99
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Fri Jun 25 08:03:40 2021 -0400

    added git push integration

commit 2eb7a57a948948d914b2e4afa3e6c42d913eb7c6
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Sun Jun 20 08:09:10 2021 -0400

    correctly hiding markdown edit button if git has a conflict

commit 0ab830f50628631a

--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "rollup": "^2.21.0",
     "sinon": "9.x",
     "wdio-chromedriver-service": "7.1.0",
-    "webdriverio": "7.7.3"
+    "webdriverio": "7.7.3",
+    "xmldom": "^0.6.0"
   }
 }
