--- a/package.json
+++ b/package.json
@@ -57,16 +57,16 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/register": "^7.11.5",
     "@babel/runtime": "^7.11.2",
-    "@wdio/cli": "7.7.3",
-    "@wdio/local-runner": "7.7.3",
-    "@wdio/mocha-framework": "7.7.3",
-    "@wdio/spec-reporter": "7.7.3",
-    "@wdio/sync": "7.7.3",
+    "@wdio/cli": "7.16.2",
+    "@wdio/local-runner": "7.16.2",
+    "@wdio/mocha-framework": "7.16.1",
+    "@wdio/spec-reporter": "7.16.1",
+    "@xmldom/xmldom": "^0.7.5",
     "babel-eslint": "^10.1.0",
     "chai": "4.x",
     "chai-webdriverio": "^1.0.0",
     "cheerio": "^1.0.0-rc.3",
-    "chromedriver": "^91.0.0",
+    "chromedriver": "^94.0.0",
     "coveralls": "3.x",
     "eslint": "7.x",
     "fepper": "*",
@@ -76,8 +76,7 @@
     "nyc": "15.x",
     "rollup": "^2.21.0",
     "sinon": "9.x",
-    "wdio-chromedriver-service": "7.1.0",
-    "webdriverio": "7.7.3",
-    "xmldom": "^0.6.0"
+    "wdio-chromedriver-service": "7.2.2",
+    "webdriverio": "7.16.2"
   }
 }
