--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.5",
+    "@babel/eslint-parser": "^7.16.3",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
@@ -62,13 +63,12 @@
     "@wdio/mocha-framework": "7.16.1",
     "@wdio/spec-reporter": "7.16.1",
     "@xmldom/xmldom": "^0.7.5",
-    "babel-eslint": "^10.1.0",
     "chai": "4.x",
     "chai-webdriverio": "^1.0.0",
     "cheerio": "^1.0.0-rc.3",
     "chromedriver": "^94.0.0",
     "coveralls": "3.x",
-    "eslint": "7.x",
+    "eslint": "8.x",
     "fepper": "*",
     "husky": "4.x",
     "mkdirp": "^1.0.3",
