--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,9 +5,10 @@
     "es6": true,
     "node": true
   },
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
     "ecmaVersion": 9,
+    "requireConfigFile": false,
     "sourceType": "module"
   },
   "globals": {
