--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "lint": "eslint scripts && eslint test",
-    "test": "npm run test:unit",
+    "test": "npm run test:unit && npm run test:e2e",
     "test:e2e": "node test/e2e",
     "test:unit": "nyc mocha --exit --require @babel/register test/unit"
   },
