Squashed commit of the following:
commit 72e70f5239254988864088d339e3c6e8f486092b
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Thu Jul 14 18:49:33 2022 -0400

    passing e2e tests

commit ecd7a9b2dea5f51f87dfe90e40a21b17a58b28a9
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Thu Jul 14 17:52:42 2022 -0400

    passing unit tests

commit eb31cbe60e23ffddbed64276e0f5fd2e8117fd65
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Thu Jul 14 17:03:50 2022 -0400

    passing unit tests

commit f4c4ba2c90071825f46865d45835c93c064b2239
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Thu Jul 14 15:17:55 2022 -0400

    updated test fixtures

commit 7b4e4dbd5f55661031aabb3606d714895b858e44
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Mon Jul 11 15:38:56 2022 -0400

    passing e2e tests

commit 5b6ad3e41f543f5a1fa292ccc45a7a5871f87ee5
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Mon Jul 11 13:40:29 2022 -0400

    fixed typo in comment

commit 4937ab29f96e227ccfc8d4c4dc38eefacff7e7b3
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Mon Jul 11 13:36:19 2022 -0400

    fixes per linter

commit eba5ef35c08ee33d938d241d9f6b11956cac6782
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Mon Jul 11 13:30:35 2022 -0400

    passing e2e tests

commit f03674d213577381eff62e056b1599c94e537ce4
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Mon Jul 11 12:07:49 2022 -0400

    test fixture updates

commit 30899d8af52f2ea0878c11eb372ae5e8809f40c3
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Mon Jul 11 12:01:19 2022 -0400

    removed unnecessary decoding of html entities, made other minor improvements

commit d5a27a31ca8fba31b69b67169bab3aaeaa9732e3
Author: electric-el <electric-el@electric-eloquence.io>
Date:   Mon Jul 11 07:05:03 2022 -0400

    decoding html entities for markdown editor textarea

commit 17412c1393ddbd0ff

--- a/package.json
+++ b/package.json
@@ -58,26 +58,26 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/register": "^7.11.5",
     "@babel/runtime": "^7.11.2",
-    "@wdio/cli": "^7.16.15",
-    "@wdio/local-runner": "^7.16.15",
-    "@wdio/mocha-framework": "^7.16.15",
-    "@wdio/spec-reporter": "^7.16.14",
-    "@xmldom/xmldom": "^0.7.5",
+    "@wdio/cli": "^7.20.5",
+    "@wdio/local-runner": "^7.20.5",
+    "@wdio/mocha-framework": "^7.20.3",
+    "@wdio/spec-reporter": "^7.20.3",
     "chai": "4.x",
     "chai-webdriverio": "^1.0.0",
     "cheerio": "1.0.0-rc.3",
-    "chromedriver": "101.x",
+    "chromedriver": "103.x",
     "coveralls": "3.x",
     "eslint": "8.x",
     "fepper": "*",
     "fepper-ui": "*",
     "husky": "4.x",
+    "jsdom": "^20.0.0",
     "mkdirp": "^1.0.3",
     "mocha": "8.x",
     "nyc": "15.x",
     "rollup": "^2.21.0",
     "sinon": "9.x",
-    "wdio-chromedriver-service": "^7.2.8",
-    "webdriverio": "^7.16.15"
+    "wdio-chromedriver-service": "^7.3.2",
+    "webdriverio": "^7.20.5"
   }
 }
